--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   background: #131112;
+flex-direction: column;
 
   h1 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
