--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,11 @@ flex-direction: column;
     font-size: 50px;
     color: #f7f7ff;
   }
+h2{
+font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 800;
+    font-size: 30px;
+    color: #f7f7ff;
+margin-top: 20px;
+}
 }
